Fix notifications not visible or too visible

--- a/twake/frontend/src/app/components/Leftbar/Footer/Footer.scss
+++ b/twake/frontend/src/app/components/Leftbar/Footer/Footer.scss
@@ -8,7 +8,6 @@
   border-top: 1px solid $grey_light;
   flex-direction: column;
   box-sizing: border-box;
-  display: flex;
 
   & > div {
     display: flex;
@@ -79,7 +78,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    flex: 1;
     margin-left: 20px;
     cursor: pointer;
 
